# sector-rotation-agent

./: .env.example  .gitignore  LICENSE  README.md  RUNME.md  TODO.md  pyproject.toml
data/fed_source_data/: local_fed_files.json
src/sector_rotation_agent/: __init__.py  audit.py  backtest.py  base_query.py  classify_regime_tot.py  config.py  constants.py  coordinator.py  equity_agent.py  fed_narrative_rag.py  fred_query.py  generate_hypotheses.py  historical_analogs.py  macro_agent.py  main.py  model_client.py  score_branch.py  synthesize.py  trace.py  yfin_query.py
src/sector_rotation_agent/mcp_servers/: fred_server.py  yfin_server.py
tests/: conftest.py  test_audit.py  test_classify_regime_tot.py  test_coordinator.py  test_equity_agent.py  test_fed_narrative_rag.py  test_fred_client.py  test_fred_server.py  test_generate_hypotheses.py  test_historical_analogs.py  test_macro_agent.py  test_model_client.py  test_sector_rotation_agent.py  test_synthesize.py  test_trace.py  test_yfin_client.py  test_yfin_server.py
