[project]
name = "cmu-agentic-ai-capstone-project"
version = "0.1.0"
description = "Capstone Project: Macro-Driven Financial Sector Rotation Research Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.107.0",
    "openai>=2.41.0",
    "chromadb>=1.5.9",
    "fredapi>=0.5.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.14",
    "sentence-transformers>=5.5.1",
    "yfinance>=1.4.1",
    "mcp>=1.27.2",
    "mcp[cli]>=1.8.0",
    "python-dotenv>=1.2.2",
    "ollama>=0.6.2",
    "huggingface_hub>=1.19.0",
    "markdown-pdf>=1.13.2",
    "langchain-docling>=2.0.0",
    "pyright>=1.1.410",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sector_rotation_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
]

[tool.pyright]
# Target Python version for type checking (match requires-python / the interpreter)
pythonVersion = "3.14"

# Enable basic, standard, or strict type checking
typeCheckingMode = "standard"

# Folders to scan or ignore
include = ["src", "tests"]
exclude = ["**/.*", "**/node_modules", "**/__pycache__", ".venv"]

# Granular diagnostic overrides
# reportMissingImports = "error"
reportMissingTypeStubs = "none" # "warning"
# reportUnknownMemberType = "none"